<resources>
    <string name="app_name">Turing_Login</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="create_password">Create Password</string>
    <string name="e_mail">E-mail</string>
    <string name="title_activity_tt_alpha">tt_alpha</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_delete">delete</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mahindra_university">Mahindra University</string>
    <string name="Events">Events</string>
    <string name="title_activity_fee_link">FeeLink</string>
    <string name="Fee">Fee</string>
    <string name="Moodle">Moodle</string>
    <string name="title_activity_grades_link">GradesLink</string>
    <string name="Grades">Grades</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_deleted">deleted</string>


</resources>