<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="#ffffff"
    tools:context=".Login">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordLayout"
        android:layout_width="349dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round1"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:passwordToggleContentDescription="show"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/CollegeID"
        app:layout_constraintStart_toStartOf="@+id/CollegeID"
        app:layout_constraintTop_toBottomOf="@+id/CollegeID">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="349dp"
            android:layout_height="53dp"
            android:background="@drawable/round1"
            android:backgroundTint="#DEDEDE"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:paddingStart="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/REGISTER"
        android:layout_width="180dp"
        android:layout_height="55dp"

        android:layout_marginTop="24dp"
        android:background="@drawable/round1"
        android:backgroundTint="@color/mu"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/PasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/PasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLayout" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="349dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""

        android:backgroundTint="#DEDEDE"
        android:background="@drawable/round1"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="16dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/CollegeID"
        android:layout_width="349dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/round1"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:ems="10"
        android:hint="19XJ1A0XXX"
        android:inputType="textCapSentences|textEmailAddress|textCapWords|textCapCharacters"
        android:padding="16dp"
        android:backgroundTint="#DEDEDE"
        android:paddingStart="16dp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/EmailID"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EmailID"
        app:layout_constraintTop_toBottomOf="@+id/EmailID"
        />

    <EditText
        android:id="@+id/EmailID"
        android:layout_width="349dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/round1"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:backgroundTint="#DEDEDE"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/Name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="223dp"
        android:layout_height="185dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RHead"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/RHead"
        android:layout_width="146dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:text="Register"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>